--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
+        "spatie/laravel-medialibrary": "^9.6",
+        "turahe/laravel-installer": "dev-master",
+        "turahe/laravel-likeable": "dev-master",
         "turahe/master-data": "dev-master"
     },
     "require-dev": {
