--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "laravel/laravel",
+    "name": "turahe/kredit",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "Platform marketplace with multiple payment method",
+    "keywords": ["installment", "credit", "multipayment", "marketplace"],
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
@@ -14,7 +14,9 @@
         "spatie/laravel-medialibrary": "^9.6",
         "turahe/laravel-installer": "dev-master",
         "turahe/laravel-likeable": "dev-master",
-        "turahe/master-data": "dev-master"
+        "turahe/master-data": "dev-master",
+      "ext-http": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4",
