--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-json": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "spatie/laravel-medialibrary": "^9.6",
+        "spatie/laravel-permission": "^4.0",
         "turahe/laravel-installer": "dev-master",
         "turahe/laravel-likeable": "dev-master",
         "turahe/master-data": "dev-master"
